[package]
name = "maviola_benchmarks"
description = "Benchmarks for Mavliola."
version = "0.0.0"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
readme = "README.md"
resolver = "2"
publish = false

[lib]
name = "maviola_benchmarks"
path = "src/lib.rs"

[[bin]]
name = "maviola_benchmarks"
path = "src/bin/maviola_benchmarks.rs"
test = true

###########################################################
# Dependencies
###########################################################
[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
maviola = { path = "../maviola", features = ["sync", "async", "unstable"] }
portpicker = "0.1.1"
tokio = { version = "1.36.0", default-features = false, features = ["sync", "rt", "rt-multi-thread", "net", "fs", "io-util", "time", "test-util", "macros"] }
tokio-stream = "0.1.15"

###########################################################
# Features
###########################################################
[features]
## Default features.
default = []

## All benchmarks.
all = ["mpmc", "sync"]

## MPMC benchmarks.
mpmc = []
## Benchmarks for synchronous API
sync = []
## Benchmarks for asynchronous API
async = []

###########################################################
# Metadata
###########################################################
[package.metadata.docs.rs]
# Features to include into `docs.rs` documentation
features = ["all"]
